      throughput
    * Reworked code which commit groups to the repository to significantly
      reduce the number of SQL queries executed (CNY-1273)
    * Implemented a proxy server which caches changesets. It is supported
      in both the standalone server and the apache server.
    * Including symbolic links in the path to the temporary directory returns
      an error at startup (CNY-958)

  o Build Changes:
    * A list of autosource mirrors has been added.
    * cvc cook --show-buildreqs works properly now. Thanks to Pavel
      Volkovitskiy for reporting the issue and providing the patch (CNY-1196).

  o Internal Changes:
    * A StringStream can now be set from a Unicode object.  The
      StringStream stores the UTF-8 encoding of the Unicode
      object. (CNY-366)
    * ByteStream and LongLongStream have been implemented in C.
      Modifications have been made to the NumericStream types
      implemented in C so that they can be used as base classes in
      Python.

  o Bug Fixes:
    * Conary now displays a useful error message when it is unable to
      parse a "user" line in a configuration line.  Previously Conary
      would raise an unhandled exception. (CNY-1267)
    * Mirror configurations no longer use /etc/conary/entitlements as
      the default location to read entitlements used to mirror.
      Normally the entitlements used to mirror are different than the
      entitlements required to update the system.  Therefore they
      should not be used when attempting to access source or target
      repositories when mirroring. (CNY-1239)
    * "cvc emerge" now displays error messages when the underlying
      cook process results in an exception.  Previously, an unhandled
      exception message was generated. (CNY-995)
    * Derived packages now support setuid and setgid files. (CNY-1281)
    * You can no longer accidentally include a group in itself by using
      addAll. (CNY-1123, CNY-1124)